# perfplot

./: .flake8  .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  justfile  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
example/: concat.py
perfplot/: __about__.py  __init__.py  _main.py  exceptions.py  main.py
src/perfplot/: __init__.py  _main.py
test/: perfplot_test.py  test_live.py  test_perfplot.py  test_readme.py
tests/: test_live.py  test_perfplot.py  test_readme.py
