[metadata]
name = perfplot
version = 0.8.1
author = Nico Schlömer
email = nico.schloemer@gmail.com
description = Performance plots for Python code snippets
url = https://github.com/nschloe/perfplot
project_urls =
    Code=https://github.com/nschloe/perfplot
    Issues=https://github.com/nschloe/perfplot/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
install_requires =
    dufte
    importlib_metadata;python_version<"3.8"
    matplotlib
    numpy
    tqdm
    termtables
python_requires = >=3.6
setup_requires =
    setuptools>=42
    wheel
