[metadata]
name = perfplot
version = 0.9.6
author = Nico Schlömer
author_email = nico.schloemer@gmail.com
description = Performance plots for Python code snippets
url = https://github.com/nschloe/perfplot
project_urls =
    Code=https://github.com/nschloe/perfplot
    Issues=https://github.com/nschloe/perfplot/issues
    Funding=https://github.com/sponsors/nschloe
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Utilities
keywords =
    performance
    profile

[options]
package_dir =
    =src
packages = find:
install_requires =
    dufte >= 0.2.20
    importlib_metadata;python_version<"3.8"
    matplotlib
    numpy
    rich
python_requires = >=3.7

[options.packages.find]
where=src
